--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.12"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
