done with sign up api and fecth users

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@
  NODE_ENV = development
  MONGO_PASSWORD = ebWVEBSSr4FfWza5
  MONGO_STRING = mongodb+srv://shairali:<PASSWORD>@cluster0.ihaqw.mongodb.net/e-craft?retryWrites=true&w=majority
+ JWT_WEB_SECRET=node_first_project_our_security
+ JWT_EXPIRES_IN=90d
