--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@
  MONGO_STRING = mongodb+srv://shairali:<PASSWORD>@cluster0.ihaqw.mongodb.net/e-craft?retryWrites=true&w=majority
  JWT_WEB_SECRET=node_first_project_our_security
  JWT_EXPIRES_IN=90d
+ EMAIL_SERVICE_HOST=smtp.mailtrap.io
+ EMAIL_SERVICE_PORT=2525
+ EMAIL_SERVICE_USER=8973b7f582d2a8
+ EMAIL_SERVICE_PASSWORD=3a6a6f40312faa
