--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12",
     "multer": "^1.4.4",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "nodemon server.js"
